# news-feed-api

./: .gitignore
.github/workflows/: infra.yml  main.yml  search-service.yml
infra/cdk/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
infra/cdk/lib/: news-feed-api-stack.ts
infra/cdk/lib/constructs/: api-gateway-constructor.ts  ecr-repositories-constructor.ts  search-service-constructor.ts  security-groups-construct.ts  user-identity-construct.ts
infra/cdk/test/: news-feed-api.test.ts
infra/cdk/test/constructs/: api-gateway-constructor.test.ts  search-service-constructor.test.ts  security-group-construct.test.ts  user-identity-construct.test.ts
services/search-service/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
services/search-service/.github/workflows/: search_service.yml
services/search-service/src/: router.py
services/search-service/src/controllers/: system_controller.py
services/search-service/tests/unit_tests/: conftest.py  test_system_controller.py
