[tool.poetry]
name = "search-service"
version = "0.1.0"
description = "Service responsible for searching a term in different News sources"
authors = ["Gabriel Menezes <gabrielsm90@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
aiohttp = "^3.11.7"
uvicorn = "^0.32.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
